# 6502

./: .build.yml  .gitignore  .gitmodules  .~lock.6502.csv#  6502.csv  CMakeLists.txt  LICENSE  README.md  a.out  colors.webm  common.c  common.h  cpu.c  cpu.h  csv2h.awk  dbg.c  dbg.h  gui.c  gui.h  instructions.h  main.c  mnemonics.h  screen.c  screen.h
as/: CMakeLists.txt  as.c  as.h  hash.c  hash.h  main.c  map.c  map.h  pp.c
as/test/: colors.s  disco.s  test-abs-jump.s  test.s
docs/: build.lua  build.sh  live-reload.sh
docs/.sass-cache/e3a0acadbd5d6bc6cf7ba6a2321a4fa55d361330/: styles.scssc
docs/content/: CNAME  building.md  debugger.md  demo.webm  examples.md  index.md  styles.scss  usage.md
docs/site/: building.html  demo.webm  examples.html  index.html  index.md  styles.css  styles.scss  usage.html  usage.md
docs/templates/: home.html  page.html
